platform/headlamp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headlamp
  namespace: headlamp
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: headlamp
  template:
    metadata:
      labels:
        k8s-app: headlamp
    spec:
      serviceAccountName: headlamp-admin
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: headlamp
          image: ghcr.io/headlamp-k8s/headlamp:latest
          imagePullPolicy: Always
          args:
            - -in-cluster
            - -plugins-dir=/headlamp/plugins
          ports:
            - containerPort: 4466
              name: http
            - containerPort: 9090
              name: metrics
          livenessProbe:
            httpGet:
              path: /
              port: 4466
            initialDelaySeconds: 30
            timeoutSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 4466
            initialDelaySeconds: 30
            timeoutSeconds: 30
