platform/headlamp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headlamp
  namespace: headlamp
spec:
  type: ClusterIP
  selector:
    k8s-app: headlamp
  ports:
    - port: 80
      targetPort: 4466
      protocol: TCP
